// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Custom Class Name DOM Snapshot 1`] = `
<IconSettings
  iconPath="/assets/icons"
>
  <SLDSAlertContainer
    className="this-is-the-container"
  >
    <SLDSAlert
      assistiveText={
        Object {
          "closeButton": "Close",
        }
      }
      className="this-is-the-alert"
      icon={
        <SLDSIcon
          category="utility"
          name="user"
          size="medium"
        />
      }
      label={
        <span>
          Logged in as John Smith (johnsmith@acme.com). 
          <a
            href="javascript:void(0);"
          >
            Log out
          </a>
        </span>
      }
      variant="info"
    />
  </SLDSAlertContainer>
</IconSettings>
`;

exports[`Alert Custom Class Name HTML Snapshot 1`] = `
"<div class=\\"slds-notify-container this-is-the-container\\">
  <div class=\\"slds-notify slds-notify_alert slds-theme_alert-texture slds-theme_info this-is-the-alert\\" role=\\"alert\\"><span class=\\"slds-assistive-text\\">info</span><span><svg aria-hidden=\\"true\\" class=\\"slds-m-right--x-small slds-icon slds-icon--x-small\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#user\\"></use></svg></span>
    <h2><span>Logged in as John Smith (johnsmith@acme.com). <a href=\\"javascript:void(0);\\">Log out</a></span></h2>
  </div>
</div>"
`;

exports[`Alert Dismissable DOM Snapshot 1`] = `
<IconSettings
  iconPath="/assets/icons"
>
  <SLDSAlertContainer>
    <SLDSAlert
      assistiveText={
        Object {
          "closeButton": "Close",
        }
      }
      dismissible={true}
      icon={
        <SLDSIcon
          category="utility"
          name="user"
          size="medium"
        />
      }
      label={
        <span>
          Logged in as John Smith (johnsmith@acme.com). 
          <a
            href="javascript:void(0);"
          >
            Log out
          </a>
        </span>
      }
      onRequestClose={[Function]}
      variant="info"
    />
  </SLDSAlertContainer>
</IconSettings>
`;

exports[`Alert Dismissable HTML Snapshot 1`] = `
"<div class=\\"slds-notify-container\\">
  <div class=\\"slds-notify slds-notify_alert slds-theme_alert-texture slds-theme_info\\" role=\\"alert\\"><span class=\\"slds-assistive-text\\">info</span><span><svg aria-hidden=\\"true\\" class=\\"slds-m-right--x-small slds-icon slds-icon--x-small\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#user\\"></use></svg></span>
    <h2><span>Logged in as John Smith (johnsmith@acme.com). <a href=\\"javascript:void(0);\\">Log out</a></span></h2><button class=\\"slds-button slds-button--icon-inverse slds-notify__close\\" title=\\"Close\\" type=\\"button\\"><svg aria-hidden=\\"true\\" class=\\"slds-button__icon\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#close\\"></use></svg><span class=\\"slds-assistive-text\\">Close</span></button></div>
</div>"
`;

exports[`Alert Error DOM Snapshot 1`] = `
<IconSettings
  iconPath="/assets/icons"
>
  <SLDSAlertContainer>
    <SLDSAlert
      assistiveText={
        Object {
          "closeButton": "Close",
        }
      }
      icon={
        <SLDSIcon
          category="utility"
          name="ban"
          size="medium"
        />
      }
      label={
        <span>
          Your browser is currently not supported. Your Salesforce may be degraded. 
          <a
            href="javascript:void(0);"
          >
            More Information
          </a>
        </span>
      }
      variant="error"
    />
  </SLDSAlertContainer>
</IconSettings>
`;

exports[`Alert Error HTML Snapshot 1`] = `
"<div class=\\"slds-notify-container\\">
  <div class=\\"slds-notify slds-notify_alert slds-theme_alert-texture slds-theme_error\\" role=\\"alert\\"><span class=\\"slds-assistive-text\\">error</span><span><svg aria-hidden=\\"true\\" class=\\"slds-m-right--x-small slds-icon slds-icon--x-small\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#ban\\"></use></svg></span>
    <h2><span>Your browser is currently not supported. Your Salesforce may be degraded. <a href=\\"javascript:void(0);\\">More Information</a></span></h2>
  </div>
</div>"
`;

exports[`Alert Info DOM Snapshot 1`] = `
<IconSettings
  iconPath="/assets/icons"
>
  <SLDSAlertContainer>
    <SLDSAlert
      assistiveText={
        Object {
          "closeButton": "Close",
        }
      }
      icon={
        <SLDSIcon
          category="utility"
          name="user"
          size="medium"
        />
      }
      label={
        <span>
          Logged in as John Smith (johnsmith@acme.com). 
          <a
            href="javascript:void(0);"
          >
            Log out
          </a>
        </span>
      }
      variant="info"
    />
  </SLDSAlertContainer>
</IconSettings>
`;

exports[`Alert Info HTML Snapshot 1`] = `
"<div class=\\"slds-notify-container\\">
  <div class=\\"slds-notify slds-notify_alert slds-theme_alert-texture slds-theme_info\\" role=\\"alert\\"><span class=\\"slds-assistive-text\\">info</span><span><svg aria-hidden=\\"true\\" class=\\"slds-m-right--x-small slds-icon slds-icon--x-small\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#user\\"></use></svg></span>
    <h2><span>Logged in as John Smith (johnsmith@acme.com). <a href=\\"javascript:void(0);\\">Log out</a></span></h2>
  </div>
</div>"
`;

exports[`Alert Offline DOM Snapshot 1`] = `
<IconSettings
  iconPath="/assets/icons"
>
  <SLDSAlertContainer>
    <SLDSAlert
      assistiveText={
        Object {
          "closeButton": "Close",
        }
      }
      icon={
        <SLDSIcon
          category="utility"
          name="offline"
          size="medium"
        />
      }
      label={
        <span>
          You are in offline mode. 
          <a
            href="javascript:void(0);"
          >
            More Information
          </a>
        </span>
      }
      variant="offline"
    />
  </SLDSAlertContainer>
</IconSettings>
`;

exports[`Alert Offline HTML Snapshot 1`] = `
"<div class=\\"slds-notify-container\\">
  <div class=\\"slds-notify slds-notify_alert slds-theme_alert-texture slds-theme_offline\\" role=\\"alert\\"><span class=\\"slds-assistive-text\\">offline</span><span><svg aria-hidden=\\"true\\" class=\\"slds-m-right--x-small slds-icon slds-icon--x-small\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#offline\\"></use></svg></span>
    <h2><span>You are in offline mode. <a href=\\"javascript:void(0);\\">More Information</a></span></h2>
  </div>
</div>"
`;

exports[`Alert Warning DOM Snapshot 1`] = `
<IconSettings
  iconPath="/assets/icons"
>
  <SLDSAlertContainer>
    <SLDSAlert
      assistiveText={
        Object {
          "closeButton": "Close",
        }
      }
      icon={
        <SLDSIcon
          category="utility"
          name="warning"
          size="medium"
        />
      }
      label={
        <span>
          Your browser is outdated. Your Salesforce experience may be degraded. 
          <a
            href="javascript:void(0);"
          >
            More Information
          </a>
        </span>
      }
      variant="warning"
    />
  </SLDSAlertContainer>
</IconSettings>
`;

exports[`Alert Warning HTML Snapshot 1`] = `
"<div class=\\"slds-notify-container\\">
  <div class=\\"slds-notify slds-notify_alert slds-theme_alert-texture slds-theme_warning\\" role=\\"alert\\"><span class=\\"slds-assistive-text\\">warning</span><span><svg aria-hidden=\\"true\\" class=\\"slds-m-right--x-small slds-icon slds-icon--x-small\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#warning\\"></use></svg></span>
    <h2><span>Your browser is outdated. Your Salesforce experience may be degraded. <a href=\\"javascript:void(0);\\">More Information</a></span></h2>
  </div>
</div>"
`;
